JG-2003-04-22-0  Bugfix:    qrsh (rshd) does not set limits after setting the 
                            osjobid. This disabled limits that depend on being 
                            in a OS managed job (e.g. on SUPER-UX/SX).
                 IZ:        #513
                 Review:    to be done
                 Changed:   rshd

CR-2003-04-16-0  Testsuite: sharetree test:
                            Don't trigger scheduler run when a job is already
                            running in a queue. 

JG-2003-04-15-0  Enhancem.: Added infrastructure for spooling to PostgreSQL 
                            database.
                            Use relative include paths for spooling related 
                            includes.
                            Fixed dependencies on spooling libraries.

CR-2003-04-14-0  Testsuite: communication test:
                            added version information to test report

CR-2003-04-11-0  Testsuite: communication test:
                            added function communication_compare_data_files() to
                            compare test data files.

JG-2003-04-11-1  Enhancem.: Pass answer list to functions defined in the 
                            spooling framework. 
                            Validate / output contents of this answer list after
                            every call to a spooling function.
                            Removed unused I18N messages in various modules.

JG-2003-04-11-0  Testsuite: procedure unsuspend_job failed with tcl error
                 Review:    CR

JG-2003-04-10-0  Testsuite: avoid testsuite timeout during install_qmaster
                            when SGE is installed on a slow NFS mounted 
                            filesystem. 
                 Review:    CR

EB-2003-04-10-1  Testsuite: test #524: qdel -u <user> does not delete all jobs 
                            of the user
                 Issue:     528
